--- a/platformio.ini
+++ b/platformio.ini
@@ -7,3 +7,9 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
+[env:featheresp32]
+platform = espressif32
+framework = arduino
+board = featheresp32
+monitor_speed = 115200
