--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 framework = arduino
 board = featheresp32
 monitor_speed = 115200
+
+lib_deps =
+  Adafruit Motor Shield V2 Library@^1.0.5
