Define build flags in platformio config

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,12 @@ framework = arduino
 board = featheresp32
 monitor_speed = 115200
 
+build_flags =
+  '-DACT_POT_NEG_PIN=34'
+  '-DACT_POT_WIPER_PIN=39'
+  '-DACT_POT_POS_PIN=36'
+  '-DMOTOR_NUM=4'
+
 lib_deps =
   Adafruit Motor Shield V2 Library@^1.0.5
+  Streaming
