Create a class for interfacing with the Ping device

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ build_flags =
   '-DACT_POT_NEG_PIN=34'
   '-DACT_POT_WIPER_PIN=39'
   '-DACT_POT_POS_PIN=36'
+  '-DPING_PIN=21'
   '-DMOTOR_NUM=4'
 
 lib_deps =
