--- a/platformio.ini
+++ b/platformio.ini
@@ -22,5 +22,7 @@ build_flags =
   '-DMOTOR_NUM=4'
 
 lib_deps =
+  Adafruit GFX Library@^1.3.6
   Adafruit Motor Shield V2 Library@^1.0.5
+  Adafruit SSD1306@^1.2.9
   Streaming
