--- a/platformio.ini
+++ b/platformio.ini
@@ -18,11 +18,13 @@ build_flags =
   '-DACT_POT_NEG_PIN=34'
   '-DACT_POT_WIPER_PIN=39'
   '-DACT_POT_POS_PIN=36'
-  '-DPING_PIN=21'
+  '-DNEOPIXEL_PIN=21'
   '-DMOTOR_NUM=4'
+  '-DPING_PIN=21'
 
 lib_deps =
   Adafruit GFX Library@^1.3.6
   Adafruit Motor Shield V2 Library@^1.0.5
+  Adafruit NeoPixel@>=1.1.8
   Adafruit SSD1306@^1.2.9
   Streaming
