Copy over and implement the capsense library

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,11 @@ build_flags =
   '-DACT_POT_NEG_PIN=34'
   '-DACT_POT_WIPER_PIN=39'
   '-DACT_POT_POS_PIN=36'
+  '-DBUTTON_A=15'
+  '-DBUTTON_B=32'
+  '-DBUTTON_C=14'
+  '-DCAP_SEND_PIN=18'
+  '-DCAP_RECV_PIN=19'
   '-DNEOPIXEL_PIN=21'
   '-DMOTOR_NUM=4'
   '-DPING_PIN=21'
