--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ build_flags =
   '-DBUTTON_C=14'
   '-DNEOPIXEL_PIN=4'
   '-DMOTOR_NUM=4'
+  '-DPING_THRESHOLD_INCHES=12'
   '-DPING_PIN=21'
 
 lib_deps =
