#define close timer time

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ build_flags =
   '-DBUTTON_B=32'
   '-DBUTTON_C=14'
   '-DNEOPIXEL_PIN=4'
+  '-DCLOSE_TIMER_MS=4000'
   '-DMOTOR_NUM=4'
   '-DPING_THRESHOLD_INCHES=12'
   '-DPING_PIN=21'
