Setup sound test to find the optimum parameters

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,17 +15,22 @@ board = featheresp32
 monitor_speed = 115200
 
 build_flags =
+  '-DACT_POT_NEG_PIN=36'
   '-DACT_POT_POS_PIN=34'
   '-DACT_POT_WIPER_PIN=39'
-  '-DACT_POT_NEG_PIN=36'
   '-DBUTTON_A=15'
   '-DBUTTON_B=32'
   '-DBUTTON_C=14'
-  '-DNEOPIXEL_PIN=4'
   '-DCLOSE_TIMER_MS=4000'
   '-DMOTOR_NUM=4'
-  '-DPING_THRESHOLD_INCHES=12'
+  '-DNEOPIXEL_PIN=4'
   '-DPING_PIN=21'
+  '-DPING_THRESHOLD_INCHES=12'
+  '-DSOUND_CHANNEL=0'
+  '-DSOUND_FREQ=1000000'
+  '-DSOUND_OCTAVE=4'
+  '-DSOUND_PIN=27'
+  '-DSOUND_RESOLUTION=12'
 
 lib_deps =
   Adafruit GFX Library@^1.3.6
