--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,42 @@
   "terminal.integrated.env.osx": {
     "PATH": "/Users/alexeden/.platformio/penv/bin:/Users/alexeden/.platformio/penv:/Users/alexeden/.cargo/bin:/Users/alexeden/.cargo/bin:/Users/alexeden/.nvm/versions/node/v11.7.0/bin:/Users/alexeden/Library/Python/2.7/bin:/packages/glslang-osx/bin:/bin:/Applications/Postgres.app/Contents/Versions/latest/bin:/Users/alexeden/code/emscripten:/Users/alexeden/code/emscripten/clang/e1.37.27_64bit:/Users/alexeden/code/emscripten/node/4.1.1_64bit/bin:/Users/alexeden/code/emscripten/emscripten/1.37.27:/Users/alexeden/.cargo/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:/usr/local/share/dotnet:/opt/X11/bin:~/.dotnet/tools:/Applications/Wireshark.app/Contents/MacOS:/Applications/Postgres.app/Contents/Versions/latest/bin",
     "PLATFORMIO_CALLER": "vscode"
+  },
+  "files.associations": {
+    "*.config": "yaml",
+    "*.cc": "cpp",
+    "array": "cpp",
+    "*.tcc": "cpp",
+    "cctype": "cpp",
+    "clocale": "cpp",
+    "cmath": "cpp",
+    "cstdarg": "cpp",
+    "cstdint": "cpp",
+    "cstdio": "cpp",
+    "cstdlib": "cpp",
+    "cwchar": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "unordered_map": "cpp",
+    "vector": "cpp",
+    "exception": "cpp",
+    "fstream": "cpp",
+    "functional": "cpp",
+    "initializer_list": "cpp",
+    "iosfwd": "cpp",
+    "istream": "cpp",
+    "limits": "cpp",
+    "new": "cpp",
+    "ostream": "cpp",
+    "numeric": "cpp",
+    "sstream": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp",
+    "system_error": "cpp",
+    "cinttypes": "cpp",
+    "type_traits": "cpp",
+    "tuple": "cpp",
+    "typeinfo": "cpp",
+    "utility": "cpp"
   }
 }
