--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,9 @@ build_flags =
   '-DACT_POT_NEG_PIN=36'
   '-DACT_POT_POS_PIN=34'
   '-DACT_POT_WIPER_PIN=39'
+  '-DACT_MOVING_LED_PIN=12'
+  '-DACT_STOPPED_LED_PIN=27'
+  '-DACT_LIMIT_LED_PIN=33'
   '-DBUTTON_A=15'
   '-DBUTTON_B=32'
   '-DBUTTON_C=14'
