--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,7 @@ build_flags =
   '-DSOUND_RESOLUTION=12'
 
 lib_deps =
+  Adafruit MCP3008@^1.0.0
   Adafruit GFX Library@^1.3.6
   Adafruit Motor Shield V2 Library@^1.0.5
   Adafruit NeoPixel@>=1.1.8
