--- a/platformio.ini
+++ b/platformio.ini
@@ -15,12 +15,13 @@ board = featheresp32
 monitor_speed = 115200
 
 build_flags =
-  '-DACT_POT_NEG_PIN=36'
-  '-DACT_POT_POS_PIN=34'
-  '-DACT_POT_WIPER_PIN=39'
+  '-DACT_ADC_CS_PIN=4'
   '-DACT_MOVING_LED_PIN=12'
   '-DACT_STOPPED_LED_PIN=27'
   '-DACT_LIMIT_LED_PIN=33'
+  '-DACT_WIPER_ADC_CHANNEL=0'
+  '-DACT_POT_POS_ADC_CHANNEL=1'
+  '-DACT_POT_NEG_ADC_CHANNEL=2'
   '-DBUTTON_A=15'
   '-DBUTTON_B=32'
   '-DBUTTON_C=14'
