--- a/platformio.ini
+++ b/platformio.ini
@@ -39,4 +39,5 @@ lib_deps =
   Adafruit Motor Shield V2 Library@^1.0.5
   Adafruit NeoPixel@>=1.1.8
   Adafruit SSD1306@^1.2.9
+  NeoPixelBus@^2.4.2
   Streaming
